--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "hamt-sync"
-description = "HAMT implementation whose sub-trees can be shared over threads"
-version = "0.2.5"
+name = "imleak"
+description = "Immutable data structures not GC'd"
+version = "0.1.0"
 authors = ["Yota Toyama <raviqqe@gmail.com>"]
 license = "MIT"
 edition = "2018"
